@@ -249,7 +249,7 @@ local questsMetadata = {
 	[5526] = { id=5526, name="Shards of the Felvine", baseexp=14300, exp=0, qlvl=60, type="turnin", reqItems="18501-1", preQuests="5527", routes="Main,Strat,Solo", routeSection="Moonglade", areaType="Zone", area="Moonglade", comments="You can collect the shard from Dire Maul without being on the quest. Loot the object on the ground" },
 	[8446] = { id=8446, name="Shrouded in Nightmare", baseexp=14300, exp=0, qlvl=60, type="turnin", reqItems="20644-1", routes="Main,Strat,Solo", routeSection="Moonglade", areaType="Zone", area="Moonglade", },
 	[6845] = { id=6845, name="Uncovering Past Secrets", baseexp=10900, exp=0, qlvl=57, type="turnin", preQuests="1123,1124,1125", routes="Main,Strat,Solo", routeSection="Moonglade", areaType="Zone", area="Moonglade", },
-	[1185] = { id=1185, name="Under the Chitin War...", baseexp=4350, exp=0, qlvl=57, type="turnin", preQuests="1123,1124,1125", routes="Main,Strat,Solo", routeSection="Moonglade", areaType="Zone", area="Moonglade", },
+	[1185] = { id=1185, name="Under the Chitin Was...", baseexp=4350, exp=0, qlvl=57, type="turnin", preQuests="1123,1124,1125", routes="Main,Strat,Solo", routeSection="Moonglade", areaType="Zone", area="Moonglade", },
 	[8307] = { id=8307, name="Desert Recipe", baseexp=4350, exp=0, qlvl=57, type="turnin", reqProf=185, reqProfSkill=285, routes="Main,Strat,Solo", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
 	[8313] = { id=8313, name="Sharing the Knowledge", baseexp=8750, exp=0, qlvl=57, type="turnin", reqProf=185, reqProfSkill=285, routes="Main,Strat,Solo", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
 	[8315] = { id=8315, name="The Calling", baseexp=11900, exp=0, qlvl=60, type="turnin", preQuests="8304,8309,8310", routes="Main,Strat", routeSection="SilithusHold2", areaType="Zone", area="Silithus", comments="We will do this quest after turning in the prequests. In TBC, it becomes a 5-man quest instead of a raid. It's 12k exp + 9.5k free from the followup, it's worth spending some minutes" },
@@ -287,7 +287,7 @@ local questsMetadata = {
 	[5163] = { id=5163, name="Are We There, Yeti?", baseexp=11250, exp=0, qlvl=58, type="optional", reqItems="12928-1", preQuests="3783,977", routes="Main,Strat,Solo", routeSection="wsEverlook", areaType="Zone", area="Winterspring", },
 	[969] = { id=969, name="Luck Be With You", baseexp=9550, exp=0, qlvl=60, type="optional", reqItems="12334-4", routes="Main,Strat,Solo", routeSection="wsEverlook", areaType="Zone", area="Winterspring", },
 	[5056] = { id=5056, name="Shy-Rotam", baseexp=11900, exp=0, qlvl=60, type="optional", preQuests="5054,5055", routes="Main,Strat,Solo", routeSection="wsEverlook", areaType="Zone", area="Winterspring", },
-	[5057] = { id=5057, name="Past Endeavors", baseexp=4750, exp=0, qlvl=60, type="turnin", preQuests="5054,5055,5056", routes="Main,Strat,Solo", routeSection="ThunderBluff", areaType="Zone", area="Winterspring", comments="There's conflicting info whether this is completed in Winterspring or in Thunderbluff" },
+	[5057] = { id=5057, name="Past Endeavors", baseexp=4750, exp=0, qlvl=60, type="turnin", preQuests="5054,5055,5056", routes="Main,Strat,Solo", routeSection="wsEverlook", areaType="Zone", area="Winterspring", comments="There's conflicting info whether this is completed in Winterspring or in Thunderbluff" },
 	[5385] = { id=5385, name="The Remains of Trey Lightforge", baseexp=10900, exp=0, qlvl=57, type="optional", reqItems="13562-1", preQuests="5202,5203,5204", routes="Main,Strat,Solo", routeSection="felwoodEmerald", areaType="Zone", area="Felwood", },
 	[2938] = { id=2938, name="Venom to the Undercity", baseexp=12250, exp=0, qlvl=55, type="turnin", preQuests="2933,2934,2935,2936", routes="Main,Strat,Solo", routeSection="Undercity", areaType="Zone", area="Undercity", },
 	[3570] = { id=3570, name="Seeping Corruption", baseexp=7350, exp=0, qlvl=52, type="turnin", preQuests="3568,3569", routes="Main,Strat,Solo", routeSection="Undercity", areaType="Zone", area="Undercity", },
