@@ -2,6 +2,7 @@ Changelog:
 
 3.11
 - Added Un'Goro Soil quest
+- Now shows a warning the first time you try to delete an item used by quests in any route (resets on reload)
 
 3.10
 - Fixed lua error with comment
